# ualg

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
src/: lib.rs  scal.rs  vec.rs
src/vec/: vec2.rs
